# cpp_template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
app/: CMakeLists.txt
cmake/: CopyResources.cmake  Dependencies.cmake  InstallExternals.cmake
include/cpp_template/: config.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  config.cppm  config.cppm.in
test/: CMakeLists.txt
